CHANGE LOG
=========================================================================

Changes up to 0.96

   * greatly improved quality of the surface rendering algorithm for
     surface_quality = 2, 3, 4, etc.

   * fixed over-zealous movie security warning: no longer warns if
     there weren't any commands defined

   * surface_carve_cutoff, surface_carve_selection, surface_carve_state
     settings, to enable sub-atomic culling of surfaces...

   * stick_transparency opengl rendering fixed

   * passive stereo GLUT support (extra-wide desktop) for Windows

   * adjusted reflectivity of interior color to better match exterior

   * minor fixes to depth_cue and ray_trace_fog control and input 

   * now uses 3X less memory when rendering surface_type=2 (meshes)

   * fixed bug in surface generation code, & treaked surface modes

   * various changes to surfacing algorithm greatly increase robustness
     when surfacing crevaces -- can now handle small(er) solvent probes.

   * surface_solvent, triangle_max_passes settings

   * mesh_type, mesh_lighting, dot_lighting settings

   * reinitialize now stops rocking

   * fixed logging of button presses in MacPyMOL

   * added multi-line command paste support to MacPyMOL

   * dropped support for "del all" in favor of "dele all"

   * StereoPyMOL1280 mode on mac for higher-resolution stereo

   * fixed a race condition that was causing OSX-X11-hybrid to crash
     when "quit" was typed into the external Tcl/Tk GUI
    
   * added numarray into the osx-x11-hybrid version for BSI use

   * increased the session file version # to account for the new colors

   * added a "perceptive space" rainbow & switched this over to default

   * fixed ray-tracing bug with infinite loops on transparent surfaces

   * fixed logging for new molecular editing features

   * pdb1 extension support

   * fixed unintentional default OpenGL bug reporting 

Changes up to 0.95
