@@ -1209,6 +1209,9 @@ void SettingGenerateSideEffects(int index,char *sele,int state)
   case cSetting_surface_carve_state:
   case cSetting_surface_carve_cutoff:
   case cSetting_surface_carve_selection:
+  case cSetting_surface_clear_state:
+  case cSetting_surface_clear_cutoff:
+  case cSetting_surface_clear_selection:
   case cSetting_surface_solvent:
   case cSetting_surface_proximity:
   case cSetting_cavity_cull:
@@ -2219,6 +2222,9 @@ void SettingInitGlobal(int alloc,int reset_gui)
   SettingSet_s(I,cSetting_surface_carve_selection,"");
   SettingSet_i(I,cSetting_surface_carve_state,0);
   SettingSet_f(I,cSetting_surface_carve_cutoff,0.0F);
+  SettingSet_s(I,cSetting_surface_clear_selection,"");
+  SettingSet_i(I,cSetting_surface_clear_state,0);
+  SettingSet_f(I,cSetting_surface_clear_cutoff,0.0F);
 
 }
 
